[package]
name = "quic"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
nanorand = "0.7.0"
rustls = { version = "0.23.25", default-features = false }
rcgen = "0.13.2"
tokio = { version = "1.44.2", features = ["full"] }
tokio-rustls = { version = "0.26.0" }
quinn="0.11.7"
rustls-pemfile="*"
aws-lc-rs = { version = "1.0.0", optional = true }
ring = { version = "0.16.20", optional = true }

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "client.rs"

[features]
default = ["rustls-ring"]
rustls-aws-lc-rs =[]
rustls-ring =[]


# quinn = "*"
# cargo tree | grep quinn -> to see the version